--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <div class="loading ">
   <div class="loading-container">
-    <p>Loading ...</p>
+    <p>Igniting ...</p>
     <img class="loader" src="assets/img/rubik.svg"/>
   </div>
 </div>
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="row">
                     <div class="title add-animation" id="animationTest">
-                        <h2>We are adventurers<br> ready to take on the world</h2>
+                        <h2>Ready to take on the world</h2>
                         <div class="separator-container">
                           <div class="separator line-separator">♦</div>
                         </div>
@@ -239,8 +239,8 @@
                         <img src="assets/img/rubik_background2.jpg">
                         <div class="over-area over-area-sm" onClick="" data-target="project_3">
                           <div class="content">
-                              <h4>Men Style</h4>
-                              <p>We've been working with Kingsman Studios and we are proud that...</p>
+                              <h4>Moonshot Interview</h4>
+                              <p>Helping thousands land their dream job. Provides daily nudge to ace and practice interviews...</p>
                           </div>
                           <button class="btn hidden-sm hidden-xs" onClick="rubik.showModal(this)" data-target="project_3">       
                                  More Details
@@ -254,8 +254,8 @@
                         <img src="assets/img/rubik_background2.jpg">
                          <div class="over-area over-area-sm" onClick="" data-target="project_4">
                           <div class="content">
-                              <h4>Men Style</h4>
-                              <p>We've been working with Kingsman Studios and we are proud that...</p>
+                              <h4>Art Map</h4>
+                              <p>Collecting contemporary art analytics...</p>
                           </div>
                           <button class="btn hidden-sm hidden-xs" onClick="rubik.showModal(this)" data-target="project_4">       
                                  More Details
