--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="assets/css/rubick.css" rel="stylesheet"/>
 
     <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
     <link href="assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
     <link href="assets/css/fonts/Rubik-Fonts.css" rel="stylesheet" />
@@ -22,7 +22,7 @@
 <body>
 <div class="loading ">
   <div class="loading-container">
-    <p>Igniting ...</p>
+    <!-- <p>Igniting ...</p> -->
     <img class="loader" src="assets/img/rubik.svg"/>
   </div>
 </div>
@@ -98,8 +98,8 @@
 
             <div class="container"> 
                  <div class="content">
-                    <p><span>ignite creativity with</span></p>
-                    <h1>Arctic Spark</h1>
+                    <!-- <p><span>ignite creativity with</span></p> -->
+                    <h1>Ignite Creativity</h1>
                     <div class="separator-container">
                       <div class="separator line-separator">♦</div>
                     </div>
@@ -146,7 +146,7 @@
                    <div class="separator-container">
                       <div class="separator line-separator">♦</div>
                    </div>
-                   <p>We promise you a new look and more importantly, a new attitude. We build that by getting to know you, your needs and creating the best looking clothes.</p>
+                   <!-- <p>Placeholder</p> -->
                </div>
             </div>
             <div class="row">
@@ -254,7 +254,7 @@
                         <img src="assets/img/rubik_background2.jpg">
                          <div class="over-area over-area-sm" onClick="" data-target="project_4">
                           <div class="content">
-                              <h4>Art Map</h4>
+                              <h4>Artistik Atlas</h4>
                               <p>Collecting contemporary art analytics...</p>
                           </div>
                           <button class="btn hidden-sm hidden-xs" onClick="rubik.showModal(this)" data-target="project_4">       
@@ -279,7 +279,7 @@
         </div>
         <div class="team">
           <div class="row">
-             <div class="col-md-3 col-sm-6">
+            <div class="col-lg-6 col-md-6 ">
               <div class="member add-animation animation-1">
                   <img class="img-circle" src="assets/img/faces/face_1.jpg"/>
                   <div class="description">
@@ -290,7 +290,7 @@
               </div>
             </div>
 
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-6 col-md-6 ">
                <div class="member add-animation animation-2">
                   <img class="img-circle" src="assets/img/faces/face_1.jpg"/>
                   <div class="description">
@@ -300,6 +300,7 @@
 
               </div>
             </div>
+
           </div>
         </div>
       </div>
@@ -326,7 +327,7 @@
                        <h3>Community Users</h3>
                        <h5>Enterprises and small businesses</h5>
                        <div class="number">
-                        12000
+                        12352
                        </div>
                    </div>
                </div>
@@ -360,7 +361,7 @@
                    <div class="separator-container">
                       <div class="separator line-separator">♦</div>
                    </div>
-                   <p>Happy to hear from you! Please use the following form or email us.</p>
+                   <!-- <p>Please use the following form or email us.</p> -->
             </div>
                   
             <div class="contact-form">
